--- a/FinanceTracker.wpf/MainWindow.xaml
+++ b/FinanceTracker.wpf/MainWindow.xaml
@@ -18,6 +18,7 @@
                      Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBox Width="100" Margin="0,0,10,0"
                      Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"/>
+            <CheckBox Content="Income" Margin="0,0,10,0" IsChecked="{Binding IsIncome}"/>
             <Button Content="Add" Width="80" Command="{Binding AddCommand}"/>
             <Button Content="Load" Width="80" Margin="10,0,0,0" Command="{Binding LoadCommand}"/>
         </StackPanel>
@@ -26,6 +27,7 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="*"/>
                 <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" Width="100"/>
+                <DataGridCheckBoxColumn Header="Income" Binding="{Binding IsIncome}" Width="80"/>
                 <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="150"/>
             </DataGrid.Columns>
         </DataGrid>
